--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 <body>
 
     <header>
-        <h1>WORDLE RU</h1>
+        <h1>WORDLE</h1>
         
         <div class="header-controls">
             <button class="hint-btn" onclick="useHint()" title="Подсказка">
