--- a/index.html
+++ b/index.html
@@ -3,28 +3,37 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<title>Вордли — Wordle на русском языке | Играть онлайн бесплатно</title>
-<meta name="description" content="Вордли (Wordle) на русском — угадай слово из 5 букв за 6 попыток. Ежедневная словесная головоломка онлайн. Играй бесплатно без регистрации!">
-<meta name="keywords" content="вордли, wordle, wordle на русском, угадай слово, словесная игра, головоломка, игра со словами">
+
+<title>СЛОВОДЕЛ — словесная игра на русском | Играть онлайн бесплатно</title>
+
+<meta name="description" content="СЛОВОДЕЛ — словесная игра на русском языке. Угадай слово из 5 букв за 6 попыток. Ежедневная головоломка онлайн. Играй бесплатно без регистрации!">
+
+<meta name="keywords" content="словодел, угадай слово, словесная игра, игра со словами, головоломка, игра на русском, слово из 5 букв">
+
 <meta property="og:type" content="website">
-<meta property="og:title" content="Вордли — Wordle на русском языке">
-<meta property="og:description" content="Угадай слово из 5 букв за 6 попыток. Словесная головоломка!">
+<meta property="og:title" content="СЛОВОДЕЛ — словесная игра на русском языке">
+<meta property="og:description" content="Угадай слово из 5 букв за 6 попыток. Ежедневная словесная головоломка!">
 <meta property="og:url" content="https://wordle-46wl.onrender.com/">
 <meta property="og:locale" content="ru_RU">
+
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Вордли — Wordle на русском">
+<meta name="twitter:title" content="СЛОВОДЕЛ — словесная игра на русском">
 <meta name="twitter:description" content="Угадай слово из 5 букв за 6 попыток. Играй бесплатно!">
 <meta name="twitter:image" content="https://ваш-домен.ru/twitter-image.jpg">
+
 <meta name="author" content="Dorian">
 <meta name="robots" content="index, follow">
 <meta name="language" content="Russian">
+
 <link rel="canonical" href="https://wordle-46wl.onrender.com/">
+
 <!-- PWA манифест -->
 <link rel="manifest" href="/manifest.json">
-<meta name="theme-color" content="#6aaa64">
+<meta name="theme-color" content="#4a6cf7">
+
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="Вордли">
+<meta name="apple-mobile-web-app-title" content="СЛОВОДЕЛ">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@700;800&display=swap');
 
@@ -328,7 +337,7 @@
 <body>
 
     <header>
-        <h1>WORDLE</h1>
+        <h1>СЛОВОДЕЛ</h1>
         
         <div class="header-controls">
             <button class="hint-btn" onclick="useHint()" title="Подсказка">
