--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             transition: transform 0.2s, background-color 0.2s;
         }
         .icon-btn:hover {
-            background-color: var(--btn-hover);
+            background: transparent;
         }
         .icon-btn:active {
             transform: scale(0.9);
@@ -152,7 +152,6 @@
         .hint-btn {
             background: transparent;
             color: var(--tile-present);
-            border-radius: 20px;
             padding: 4px 10px;
             font-weight: 800;
             font-size: 12px;
