--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <title>СЛОВОДЕЛ — словесная игра на русском | Играть онлайн бесплатно</title>
 
 <meta name="description" content="СЛОВОДЕЛ — словесная игра на русском языке. Угадай слово из 5 букв за 6 попыток. Ежедневная головоломка онлайн. Играй бесплатно без регистрации!">
-
 <meta name="keywords" content="словодел, угадай слово, словесная игра, игра со словами, головоломка, игра на русском, слово из 5 букв">
 
 <meta property="og:type" content="website">
@@ -614,6 +613,10 @@
                 if (guess === targetWord) {
                     showMessage("Победа! 🏆", 2500);
                     isGameOver = true;
+                    
+                    // --- ВОТ ЭТА СТРОЧКА ДОБАВЛЕНА ---
+                    setTimeout(startNewGame, 3000); 
+
                 } else if (currentRow === 5) {
                     showMessage(`Вы проиграли. Слово: ${targetWord.toUpperCase()}`, -1);
                     isGameOver = true;
